--- a/parts/tools/toolsconfigwidgetbase.ui
+++ b/parts/tools/toolsconfigwidgetbase.ui
@@ -34,7 +34,7 @@
                     <cstring>toolmenuTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>Tools menu</string>
+                    <string>Tools Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -123,7 +123,7 @@
                     <cstring>filecontextTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>File context menu</string>
+                    <string>File Context Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
@@ -212,7 +212,7 @@
                     <cstring>dircontextTab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>Directory context menu</string>
+                    <string>Directory Context Menu</string>
                 </attribute>
                 <grid>
                     <property name="name">
